# SoftDev

./: README.md
dev/dev1/: makefile  mf
dev/dev2/: gdb.py  public
dev/dev3/: project.tgz  remove_created_files.sh  test.sh
dev/dev3/project/: configure.ac
dev/dev3/project/src/: Makefile.am
dev/dev3/project/src/main/: Makefile.am
python/: py1~
python/python1/: README.txt  py1  test.txt
python/python2/: SECRET  py2
python/python3/: s3.py
shell/shell1/: README  solution.sh  wall.html
shell/shell2/: solution.example  solution.sh
shell/shell3/: directories  solution
shell/shell3/s3/dirA/: dirE.tgz
shell/shell3/s3/dirB/: dirF.tgz
